kubernetes/yamls/application/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: line
  namespace: line
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: line
    spec:
      containers:
      - name: line
        image: fossasia/susi_linebot:latest-master
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
