kubernetes/yamls/application/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: line
  namespace: line
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - susi-linebotwebhook.tk 
    secretName: linewebhook-tls
  rules:
  - host: susi-linebotwebhook.tk 
    http:
      paths:
      - path: /
        backend:
          serviceName: line
          servicePort: 80
